outputs/run_1770803782511.txt
Main.java:1: error: ')' expected
public class Main { public static void main(String[] args) { System.out.println(Java Works!); } }
                                                                                    ^
Main.java:1: error: not a statement
public class Main { public static void main(String[] args) { System.out.println(Java Works!); } }
                                                                                     ^
Main.java:1: error: ';' expected
public class Main { public static void main(String[] args) { System.out.println(Java Works!); } }
                                                                                          ^
3 errors
Error: Could not find or load main class Main
Caused by: java.lang.ClassNotFoundException: Main
